[package]
name = "kale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beef = "0.5.2"
chumsky = { git = "https://github.com/zesterer/chumsky", version = "1.0.0-alpha.6", default-features = false, features = ["label", "nightly"] }
logos = "0.13.0"
tinyvec = { version = "1.6.0", features = ["alloc"] }
