[package]
name = "kale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky", version = "1.0.0-alpha.6", features = [
    "label",
    "nightly",
], default-features = false }
beef = "0.5.2"
logos = "0.13.0"
tinyvec = { version = "1.6.0", features = ["alloc"] }
comat = "0.1.3"
lerr = "0.1.5"
match_deref = "0.1.1"
paste = "1.0.14"
