[package]
name = "kale"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky", version = "1.0.0-alpha.8", features = [
    "nightly",
], default-features = false }
beef = "0.5.2"
logos = "0.15.0"
tinyvec = { version = "1.6.0", features = ["alloc"] }
comat = "0.1.3"
lerr = "0.1.5"
match_deref = "0.1.1"
paste = "1.0.14"
regex = "1.11.1"
itertools = "0.14.0"
codespan-reporting = { git = "https://github.com/brendanzab/codespan", version = "0.11.1" }
